fix: add display prop to show drop-shadow on safari

--- a/src/es/components/molecules/stage/default-/default-.css
+++ b/src/es/components/molecules/stage/default-/default-.css
@@ -26,6 +26,7 @@
 
 :host a,
 :host ks-a-back-link {
+    display: inline-block;
     filter: drop-shadow(0 0 6px rgba(0,0,0,0.4));
 
     --back-link-color: white;
